Add system notification support to browser Notification.

Recently, new system notification styling is introduced with MD style
notification.
For profile unaware notification, the style can be applied using
message_center::Notification::CreateSystemNotification
(ui/message_center), but for profile aware notification
(chrome/browser/notifications), it was not supported.
This CL adds system notification support to profile aware notification.

TEST=manual
BUG=754508

Change-Id: I9e9e180617b232c96a12665c788cc2d774cf4d63